bubba-backend (2.4) hugo vincent; urgency=low

  * Bumping for release

 -- Carl Fürstenberg <carl@excito.com>  Thu, 26 Jan 2012 21:49:11 +0100

bubba-backend (2.4~pre20) hugo vincent; urgency=low

  * input splitted array into the error log
  * We still need to get "errors" as they can include notices

 -- Carl Fürstenberg <carl@excito.com>  Thu, 26 Jan 2012 21:49:08 +0100

bubba-backend (2.4~pre19) hugo vincent; urgency=low

  * Fix syntax errors in adminfunctions (Closes: #1847)

 -- Carl Fürstenberg <carl@excito.com>  Thu, 19 Jan 2012 13:00:37 +0100

bubba-backend (2.4~pre18) hugo vincent; urgency=low

  * remove old usage of the "t" function (Closes: #1843)

 -- Carl Fürstenberg <carl@excito.com>  Wed, 18 Jan 2012 13:02:41 +0100

bubba-backend (2.4~pre17) hugo vincent; urgency=low

  * Disable ipv6 in proftpd configuration (Closes: #1792)
  * Remove missing locks that should have been removed before (Closes: #1837)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 17 Jan 2012 15:01:47 +0100

bubba-backend (2.4~pre16) hugo vincent; urgency=low

  * Updating copyright information to fit company policy

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 17:01:58 +0100

bubba-backend (2.4~pre15) hugo vincent; urgency=low

  * change to bubba3-kernel

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 13:56:14 +0100

bubba-backend (2.4~pre14) hugo vincent; urgency=low

  * remove bubba-modules reference

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 13:54:18 +0100

bubba-backend (2.4~pre13) hugo vincent; urgency=low

  * disable Tor

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 13:51:23 +0100

bubba-backend (2.4~pre12) hugo vincent; urgency=low

  * Enable logitechmediaserver is squeezecenter was enabled (Closes: #1813)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 03 Jan 2012 15:11:33 +0100

bubba-backend (2.4~pre11) hugo vincent; urgency=low

  * specify minimum version on the bubba-kernel
