@@ -1,3 +1,9 @@
+bubba-backend (2.4.0.1) hugo vincent; urgency=medium
+
+  * update minidlna config directly without using Config::Simple (Closes: #1890)
+
+ -- Carl Fürstenberg <carl@excito.com>  Wed, 01 Feb 2012 15:18:31 +0100
+
 bubba-backend (2.4) hugo vincent; urgency=low
 
   * Bumping for release
